<resources>
    <string name="app_name">Journal</string>
    <string name="entry_title_hint">Enter a title for the entry.
</string>
    <string name="entry_title_label">Title</string>
    <string name="entry_details_label">Details</string>
    <string name="entry_solved_label">Solved</string>
    <string name="new_entry">New Entry</string>
    <string name="entry_suspect_text">Choose Suspect</string>
    <string name="entry_report_text">Send Entry Report</string>
    <string name="entry_title">Entry Title</string>
    <string name="entry_date">Entry Date</string>

    <string name="entry_report">%1$s!
The entry was discovered on %2$s. %3$s, and %4$s
</string>
    <string name="entry_report_solved">The case is solved</string>
    <string name="entry_report_unsolved">The case is not solved</string>
    <string name="entry_report_no_suspect">there is no suspect.</string>
    <string name="entry_report_suspect">the suspect is %s.</string>
    <string name="entry_report_subject">Journal Entry
Report</string>
    <string name="send_report">Send entry report via</string>
</resources>