<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <Button
        android:id="@+id/entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/entry_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/entry_camera"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@android:drawable/ic_menu_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_title_label" />

    <EditText
        android:id="@+id/entry_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entry_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_details_label"/>

    <CheckBox
        android:id="@+id/entry_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_solved_label"/>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/entry_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_suspect_text"/>
    <Button
        android:id="@+id/entry_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_report_text"/>
</LinearLayout>